--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Xperts – Profile</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- Header -->
@@ -19,7 +19,6 @@
 
   <!-- Profile Content -->
   <div class="container">
-    <!-- Profile Info Card -->
     <div class="card profile-info">
       <img src="https://i.pravatar.cc/100?img=12" alt="Profile" class="profile-avatar">
       <h2 class="profile-name">user</h2>
@@ -36,7 +35,7 @@
         <label for="phone">Phone Number</label>
         <input type="text" id="phone" class="form-control" value="+8801234567890" readonly>
       </div>
-      <button type="button" class="btn btn-primary" onclick="editProfile()">Edit Profile</button>
+      <button type="button" class="btn btn-primary">Edit Profile</button>
     </div>
 
     <!-- Menu Items -->
@@ -92,10 +91,6 @@
     </a>
   </nav>
 
-  <script>
-    function editProfile() {
-      alert('Edit profile functionality would be implemented here.');
-    }
-  </script>
+
 </body>
 </html>
