--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script>window.location.href='login.php';</script>
+  <script>window.location.href='login.php';</script>  // Redirect to login page
 </body>
 </html>
